--- a/styles/style.css
+++ b/styles/style.css
@@ -50,8 +50,8 @@ ol {
   display: flex;
   flex-direction: column;
   gap: 26px;
-  width: 100%;
-  height: 100%;
+  min-width: 399px;
+  height: 100%;/**/
 }
 
 .result__video-container {
@@ -135,12 +135,6 @@ ol {
 
 .content__accent {
   color: #545050;
-  font-family: "Oswald", sans-serif;
-  font-weight: 700;
-  font-size: 75px;
-  line-height: 94%;
-  letter-spacing: 0;
-  text-transform: uppercase;
 }
 
 .content__card-link {
@@ -188,13 +182,14 @@ ol {
   align-items: center;
   gap: 5px;
   width: fit-content;
+  cursor: pointer;
 }
 
 .search-form__textfield {
   min-width: 225px;
-  border-top: 1px solid #fff;
+  border-top: 1px solid currentColor;
   border-right: none;
-  border-bottom: 1px solid #fff;
+  border-bottom: 1px solid currentColor;
   border-left: none;
   color: #fff;
   font-family: "Fira Sans Condensed", sans-serif;
@@ -212,10 +207,6 @@ ol {
 
 .search-form__textfield:focus {
   outline: none;
-}
-
-.search-form__label {
-  cursor: pointer;
 }
 
 .search-form__label:has(:focus-visible):not(:active) {
@@ -262,7 +253,7 @@ ol {
 }
 
 .button {
-  border: 1px solid #fff;
+  border: 1px solid currentColor;
   color: #fff;
   font-family: "Fira Sans Condensed", sans-serif;
   font-weight: 700;
@@ -318,7 +309,7 @@ ol {
   background-color: #545050;
 }
 
-.content__list-item:focus {
+.content__card-link:focus {
   outline: none;
 }
 
@@ -327,7 +318,7 @@ ol {
   cursor: pointer;
 }
 
-.content__list-item:focus-visible {
+.content__card-link:focus-visible {
   outline: 1px solid #fff;
 }
 
