--- a/styles/style.css
+++ b/styles/style.css
@@ -51,7 +51,7 @@ ol {
   flex-direction: column;
   gap: 26px;
   min-width: 399px;
-  height: 100%;/**/
+  height: 100%;
 }
 
 .result__video-container {
